<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="selectedBeer"
            type="com.rocappdev.beerscatalog.domain.Beer" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:contentDescription="@string/beer_image"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/notAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/not_available"
                android:textAlignment="center"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/image"
                tools:text="@string/not_available" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notAvailable"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/description_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@{selectedBeer.description}"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abv"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_data"
                tools:text="@string/abv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Double.toString(selectedBeer.abv) + '%'}"
                app:layout_constraintStart_toEndOf="@+id/abv"
                app:layout_constraintTop_toBottomOf="@+id/description_data" />

            <TextView
                android:id="@+id/ibu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/ibu"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abv"
                tools:text="@string/ibu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Double.toString(selectedBeer.ibu)}"
                app:layout_constraintStart_toEndOf="@+id/ibu"
                app:layout_constraintTop_toBottomOf="@id/abv" />

            <TextView
                android:id="@+id/food_pairing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_pairing"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibu"
                tools:text="@string/food_pairing" />

            <LinearLayout
                android:id="@+id/food_pairing_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_pairing" />

            <Button
                android:id="@+id/replacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_pairing_data"
                tools:text="@string/needs_replacement" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>